2015-10-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Defining Macros, Macro Details): Advice on 
	ending a macro body with '@c'.

2015-10-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/30section.t: Add new test 'loweredheading'.

2015-10-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Mention the last @lowersections fix, and mention macro 
	changes in texinfo.tex (newlines in a macro argument, relevant 
	for gcc manual).

2015-10-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (_section_level): Function moved to 
	tp/Texinfo/Parser.pm.  All uses updated to access 'level' value 
	of element instead.
	* tp/Texinfo/Parser.pm (_end_line) <command is in in 
	command_structuring_level>: Don't set 'level' value.
	(_parse_texi) <sectioning commands>: Set 'sections_level' extra 
	value on element, and set 'level' value by calling _section_level.
	Do it for all sectioning elements, and not just those that are 
	"root commands", to include @heading and similar.  This is 
	intended to make @heading affected by @lowersections and 
	@raisesections, reported by Quinn Greer not to work.

2015-10-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Changes: File deleted.

2015-10-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Text.pm (heading): Add a comment.

2015-10-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/tests/README: Remove instructions that don't work any more.

2015-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/index-apropos.sh, info/t/split-footnotes.sh: Send an 
	extra q to quit.

2015-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (ea_rubout),
	* TODO: Abort echo area read if backspace at start of area and 
	user input is empty.

2015-09-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/echo-area.c (input_line_prompt): Remove unused variable.
	(PUSHED_EA): Remove unused field 'prompt'.

2015-09-30  Gavin Smith  <gavinsmith0123@gmail.com>
